# oauth2-server

./: .gitignore  .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  pom.xml
oauth2-example-app/: BUILD.bazel  pom.xml
oauth2-example-app/src/main/java/com/clouway/oauth2/app/: AppServer.java  AuthBootstrap.java  JwtClient.java
oauth2-example-app/src/main/java/com/clouway/oauth2/exampleapp/: AuthorizationEndpoint.java  ClientRegistry.java  ErrorResponseDTO.java  GenerateNewRefreshToken.java  Json.java  LoginEndpoint.java  OAuthAuthorizationServerModule.java  OauthAuthorizationServerModule.java  RegistrationEndpoint.java  RegistrationRequestDTO.java  RegistrationResponseDTO.java  ResourceOwner.java  ResourceOwnerAuthentication.java  ResourceOwnerStore.java  SessionSecurity.java  TokenDTO.java  TokenEndpoint.java  TokenTimeToLive.java  UserDto.java  UserInfoEndPoint.java  UserLoader.java  UserLoaderImpl.java  UserRepository.java  VerificationEndpoint.java
oauth2-example-app/src/main/resources/com/clouway/oauth2/exampleapp/: login.html
oauth2-example-app/src/test/java/com/clouway/oauth2/exampleapp/: ClientAuthorizationEndpointTest.java  ClientRegistryContractTest.java  ClientRepositoryContractTest.java  ErrorResponseDTOEqualityTest.java  FakeHttpServletRequest.java  FakeHttpServletResponse.java  LoginEndpointTest.java  ParameterRequest.java  RegistrationEndpointTest.java  RegistrationResponseDTOEqualityTest.java  ReplyMatchers.java  SiteBricksRequestMockery.java  TokenDTOEqualityTest.java  UserLoaderImplTest.java  VerificationEndpointTest.java
oauth2-server/: BUILD.bazel  pom.xml  shade.jarjar
oauth2-server/src/main/java/com/clouway/oauth2/: AuthCodeAuthorization.java  AuthCodeAuthorization.kt  AuthorizationActivity.java  AuthorizationHeaderCredentialsRequest.java  AuthorizedClientActivity.java  AuthorizedClientActivity.kt  AuthorizedIdentityActivity.java  AuthorizedIdentityActivity.kt  BUILD.bazel  BasicAuthenticationCredentialsRequest.java  BearerTokenResponse.java  ByteRequest.java  ClientActivity.java  ClientAuthenticationCredentialsRequest.java  ClientAuthorizationActivity.java  ClientAuthorizationActivity.kt  ClientController.java  ClientCredentials.java  ClientRequest.java  ClientRequest.kt  CodeExchangeVerificationFlow.java  CoreModule.java  DateTime.java  Duration.java  Identity.java  IdentityActivity.java  IdentityAuthorizationActivity.java  IdentityAuthorizationActivity.kt  IdentityController.java  IdentityController.kt  InstantaneousController.java  InstantaneousRequest.java  InstantaneousRequestController.java  IssueNewTokenActivity.java  IssueNewTokenActivity.kt  JwtController.java  JwtController.kt  KeyStore.java  LocalConfig.kt  OAuth2ApiSupport.java  (+26 more)
oauth2-server/src/main/java/com/clouway/oauth2/authorization/: Authorization.java  Authorization.kt  AuthorizationErrorResponse.java  AuthorizationRequest.java  AuthorizationRequest.kt  AuthorizationResponse.java  AuthorizationSecurity.java  AuthorizationSecurityImpl.java  BUILD.bazel  ClientAuthorizationRepository.java  ClientAuthorizer.kt
oauth2-server/src/main/java/com/clouway/oauth2/client/: BUILD.bazel  Client.java  ClientAlreadyExistsException.java  ClientAuthentication.java  ClientAuthenticationImpl.java  ClientCredentials.java  ClientFinder.java  ClientFinder.kt  ClientKeyStore.java  ClientRegister.java  ClientRegisterImpl.java  ClientRegistrationRequest.java  ClientRegistry.java  ClientRegistryImpl.java  ClientRepository.java  IdentityKeyPair.java  JwtKeyStore.java  ServiceAccount.java  ServiceAccountFinder.java  ServiceAccountRepository.java
oauth2-server/src/main/java/com/clouway/oauth2/codechallenge/: AuthorizationCodeVerifier.java  AuthorizationCodeVerifier.kt  BUILD.bazel  CodeChallenge.java  CodeVerifier.java
oauth2-server/src/main/java/com/clouway/oauth2/common/: BUILD.bazel  DateTime.java  Duration.java
oauth2-server/src/main/java/com/clouway/oauth2/http/: FkParams.java  FkRegex.java  Fork.java  HttpException.java  Request.java  RequestHandlerMatchingParam.java  RequestHandlerMatchingParams.java  RequiresHeader.java  RequiresParam.java  Response.java  RsBadRequest.java  RsEmpty.java  RsJson.java  RsRedirect.java  RsText.java  RsWithBody.java  RsWithHeader.java  RsWithStatus.java  RsWithType.java  RsWrap.java  Status.java  Take.java  TkFork.java  TkRequestWrap.java
oauth2-server/src/main/java/com/clouway/oauth2/idtoken/: IdTokenBuilder.java
oauth2-server/src/main/java/com/clouway/oauth2/jws/: BUILD.bazel  Pem.java  PemFile.java  RsaJwsSignature.java  RsaJwsSigner.java  Signature.java  SignatureFactory.java
oauth2-server/src/main/java/com/clouway/oauth2/jwt/: BUILD.bazel  Jwt.java  JwtController.java
oauth2-server/src/main/java/com/clouway/oauth2/keystore/: BUILD.bazel  (+2 more)
oauth2-server/src/test/java/: VerifyingJjwtTokensTest.java
oauth2-server/src/test/java/com/clouway/oauth2/: AuthCodeAuthorizationTest.java  AuthorizationEqualityTest.java  AuthorizationRequestEqualityTest.java  AuthorizationResponseTest.java  AuthorizeClientWithAuthCodeTest.java  AuthorizeClientsTest.java  BUILD.bazel  BearerTokenBuilder.java  ByteRequest.java  ClientEqualityTest.java  CodeExchangeVerificationFlowTest.java  DateTimeAddSecondsTest.java  DateTimeEqualityTest.java  DecodeClientCredentialsFromAuthorizationHeaderTest.java  DecodeClientCredentialsTest.java  DurationEqualityTest.java  DurationTest.java  GetTokenInfoTest.java  HandleJwtTokenRequestsTest.java  HandleJwtTokenRequestsTest.kt  HandleTokenExchangeRequestsTest.kt  IdentityAuthorizationActivityTest.java  IdentityBuilder.java  IdentityControllerTest.java  IdentityControllerTest.kt  IssueNewTokenForClientTest.java  IssueNewTokenForClientTest.kt  OAuth2ServletTest.java  ParseClientCredentialsFromAuthorizationHeaderTest.java  PemKeyGenerator.java  RefreshTokenForClientTest.java  RefreshTokenForClientTest.kt  Requests.java  ResourceOwnerClientAuthorizationTest.java  RetrievePublicCertsTest.java  RetrievePublicKeysTest.java  RetrieveUserInfoWithAccessTokenTest.java  RevokeTokensTest.java  SerializeBearerTokensTest.java  TokenBuilder.java  (+1 more)
(+438 files in other folders)
