load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_kotlinc_options")

kt_kotlinc_options(
    name = "kt_kotlinc_options",
    x_skip_prerelease_check = True,
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.6",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
    jvm_target = "11",  # "1.6", "1.8", "9", "10", "11", "12", "13", "15", "16", or "17"
    kotlinc_options = "//:kt_kotlinc_options",
    language_version = "1.6",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
)
