load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "oauth2",
    srcs = glob([
        "*.java",
        "*.kt",
    ]),
    deps = [
        "//oauth2-server/src/main/java/com/clouway/oauth2/authorization",
        "//oauth2-server/src/main/java/com/clouway/oauth2/client",
        "//oauth2-server/src/main/java/com/clouway/oauth2/codechallenge",
        "//oauth2-server/src/main/java/com/clouway/oauth2/common",
        "//oauth2-server/src/main/java/com/clouway/oauth2/jws",
        "//oauth2-server/src/main/java/com/clouway/oauth2/jwt",
        "//oauth2-server/src/main/java/com/clouway/oauth2/keystore",
        "//oauth2-server/src/main/java/com/clouway/oauth2/token",
        "//oauth2-server/src/main/java/com/clouway/oauth2/util",
        "@maven//:com_clouway_fserve_fserve",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_mobiletoly_urlsome",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:io_jsonwebtoken_jjwt_api",
        "@maven//:io_jsonwebtoken_jjwt_impl",
        "@maven//:io_jsonwebtoken_jjwt_jackson",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:javax_servlet_servlet_api",
    ],
)
