load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "client",
    srcs = glob([
        "*.kt",
        "*.java",
    ]),
    deps = [
        "//oauth2-server/src/main/java/com/clouway/oauth2/client",
    ],
)
